<?xml version="1.0"?>
<package>
  <name>cmg_msgs</name>
  <version>0.0.1</version>
  <description>The cmg_msgs package</description>
  <maintainer email="contact@toinebru.net">Antoine Brunet</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
</package>
